test/test_examples/syntactic_examples/syntax_error/error_statement_15.zig
// Syntax error: missing "=" in assignment expression 

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var x : f64 = 0-0;
    x 42.85 + x;
}